2010-01-17  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #13093: Massuploader: Window is not closable (Thanks to Steffen Gebert)
	* Fixed bug #12742: BE-login screen: Login box with spinner becomes to small and label not centered (Thanks to Steffen Gebert)
	* Fixed bug #13167: Flash Uploader error messages should be more descriptive / Improve error handling of massuploader (Thanks to Steffen Gebert)

2010-01-17  Andreas Otto  <andreas@otto-hanika.de>

        * Fixed bug #13254: Flash Messages in wizard "create multiple pages" (Thanks to Georg Ringer)

2010-01-16  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #12681: Select/Deselect all should be visible as link (Thanks to Georg Ringer)
	* Fixed bug #12553: Text "A simple table with up to 8 columns" is wrong (Thanks to Georg Ringer)
	* Fixed bug #13255: Wrong text in wizard "create multiple pages" (Thanks to Georg Ringer)

2010-01-15  Francois Suter  <francois@typo3.org>

	* Fixed bug #11815: Saving translation settings in EM: strcmp() throws warning with PHP5.3 (Thanks to Steffen Gebert, Stefan Geith and Rupert Germann)

2010-01-14  Dmitry Dulepov  <dmitry.dulepov+typo3svn@gmail.com>

	* Fixed bug #13146: Authentication Bypass in TYPO3 Core (OpenID)

2010-01-14  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #12947: saveDocNew saves on top instead of after (Thanks to Steffen Gebert)

2010-01-13  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #13200: Text change: Links for additional software in install tool wrong / non-working (Thanks to Susanne Moog)
	* Fixed bug #13199: Cleanup: fileadminDir is hardcoded in several places (Thanks to Susanne Moog)
	* Fixed bug #5716: Install tool doesn't take the fileadminDir into account (Thanks to Benjamin Mack)
	* Fixed bug #12709: Forgotten flash message in user setup (Thanks to Georg Ringer)
	* Fixed bug #11968: Sporadic random Backend Logoffs / Add X-UA-Compatible flag (Thanks to Steffen Gebert)