@@ -1,3 +1,7 @@
+2010-01-17  Christian Kuhn  <lolli@schwarzbu.ch>
+
+	* Added feature #13192: Allow different timestamp as optional parameter in constructor of class tx_scheduler_croncmd
+
 2010-01-17  Benjamin Mack  <benni@typo3.org>
 
 	* Fixed bug #13093: Massuploader: Window is not closable (Thanks to Steffen Gebert)
